<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/black_trans_dark"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_gravity="center"
        android:background="@drawable/button_gray"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:visibility="gone"
                android:layout_marginTop="25dp"
                android:id="@+id/closee"
                android:background="@drawable/close_dialog" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:layout_marginTop="25dp"
                android:id="@+id/delete"
                android:visibility="gone"
                android:background="@drawable/delete" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"
                android:text="@string/add_totable"
                android:textColor="@color/colorPrimary" />


        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="3dp"
            >



            <TextView
                android:id="@+id/playi"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/edit_back"
                android:gravity="center"
                android:hint="@string/play"
                android:padding="5dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/light_gray" />




            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:padding="5dp"
                android:visibility="gone"
                android:id="@+id/alarm_btn"
                android:text="@string/alarm_time"
                android:textColor="@color/colorPrimary" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_blue"
                android:gravity="center"
                android:text="@string/download"
                android:id="@+id/download"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>