<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/toolsbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/backgold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/sora_list"
            android:layout_alignParentRight="true"
            android:textColor="@color/yel"
            android:layout_marginRight="20dp"
            />

    </RelativeLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/full_layout"
        android:layout_marginBottom="50dp"
        android:background="@drawable/newbackground"
        app:layout_constraintTop_toBottomOf="@+id/toolsbar">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="12dp"
            android:id="@+id/ss"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/edit_backs"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="14dp"
                android:paddingTop="14dp"
                android:text="@string/ayat_num"
                android:textColor="@color/yel"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="14dp"
                android:textColor="@color/yel"
                android:text="@string/tartib"
                android:paddingTop="14dp"
                android:textSize="16sp" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/yel"
                android:text="@string/sora"
                android:paddingBottom="14dp"
                android:paddingTop="14dp"
                android:textSize="16sp" />

        </LinearLayout>


        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/all_sour"
            android:paddingBottom="20dp"
            android:layout_marginBottom="70dp"
            app:layout_constraintTop_toBottomOf="@+id/ss"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>