<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
     android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/blackreqtangle"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp"
           android:background="@drawable/goldclose"
            android:id="@+id/close"
            />


        <RelativeLayout
            android:id="@+id/about_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/reqtangle"
            app:layout_constraintBottom_toTopOf="@+id/adds"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:padding="12dp"
                android:text="@string/about_us"
                android:gravity="center"
                android:textColor="@color/yel"
                android:textSize="16sp" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/about_sheikh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/reqtangle"
            app:layout_constraintBottom_toTopOf="@+id/addss"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:padding="12dp"
                android:text="@string/abount_sheikh"
                android:gravity="center"
                android:textColor="@color/yel"
                android:textSize="16sp" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/finish_quraan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/reqtangle"
            app:layout_constraintBottom_toTopOf="@+id/addss"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/finish_quraan"
                android:gravity="center"
                android:textColor="@color/yel"
                android:textSize="16sp" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/share_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/reqtangle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adds">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/yel"
                android:padding="12dp"
                android:text="@string/share_app"
                android:textSize="16sp" />

        </RelativeLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>